Pause and display a closure for the variable is ready

--- a/ConsoleApplication1/thrift_client/client_js/websocket/gen-js/index.html
+++ b/ConsoleApplication1/thrift_client/client_js/websocket/gen-js/index.html
@@ -50,7 +50,9 @@
   <div class="div1">
   <textarea id="shell_text" class="shell_text"></textarea><br />
   <input type="button" value="shell" class="shell_button" onclick="shell()"/><br /><br />
-  <input type="button" value="clear" class="clear_button" onclick="clear_rec()"/>
+  <input type="button" value="show variables" class="clear_button" onclick="show_variables()"/><br /><br />
+  <input type="button" value="continue" class="clear_button" onclick="continue_run()"/><br /><br />
+  <input type="button" value="clear" class="clear_button" onclick="clear_rec()"/><br /><br />
   </div>
   <div class="div2">
   </div>
